# meerkat

./: Makefile  README.md  pyproject.toml
job-monitor/: ..meerkat  Makefile  README.md  pyproject.toml
job-monitor/src/job_monitor/: ..project  .data  main.py  model.py  path.py  utils.py
job-monitor/src/job_monitor/fetcher/: __init__.py  bitten_fruit.py  blue_infinity_sign.py  green_eye.py  multi_color_g.py  red_arc_n.py
src/meerkat/: __init__.py  cli.py  core.py
tests/: test_core.py
